# Discord-KawalCOVID19-Webhook

./: .dockerignore  .env  .gitignore  Cargo.toml  changelog.md  dockerfile  index.js  package.json  readme.md
src/: main.rs
