[package]
name = "discord-covid19-webhook"
version = "0.1.0"
authors = ["Christopher Angelo <angelo@angeloanan.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.4"
reqwest = "0.10.4"
dotenv = "0.14"
chrono =  "0.4"
clokwerk = "0.3.0"